--- a/assets/styles/scss/abstracts/mixins/components/_c-button.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-button.scss
@@ -65,7 +65,7 @@
 }
 
 .btn--icon {
-  @include box-dimensions(btn, $font-size--3);
+  @include box-dimensions(btn, $font-size--h1);
   @include flex-items;
 }
 
