--- a/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-1--hero--old.scss
+++ b/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-1--hero--old.scss
@@ -35,7 +35,7 @@
     color: var(--color-secondary);
     filter: drop-shadow(0 0 0.1em var(--color-text));
     font-family: 'Oswald', sans-serif;
-    font-size: $font-size--4;
+    font-size: $font-size--h2;
     font-weight: 600;
   }
 }
