--- a/assets/styles/css/style-recourses.css
+++ b/assets/styles/css/style-recourses.css
@@ -191,7 +191,7 @@ html {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  height: 2rem;
+  height: 32px;
   background: linear-gradient(to top, hsl(calc(var(--color-secondary-h) * 1), calc(var(--color-secondary-s) * 1.15), calc(var(--color-secondary-l) * 0.6)) 0%, hsl(calc(var(--color-secondary-h) * 1), calc(var(--color-secondary-s) * 1.1), calc(var(--color-secondary-l) * 0.75)) 6px);
   border-radius: 8px;
   -webkit-box-shadow: 0 1px 0 2px rgba(0, 0, 0, 0.3), 0 5px 2.4px rgba(0, 0, 0, 0.5), 0 10.8px 9px rgba(0, 0, 0, 0.2);
@@ -202,15 +202,12 @@ html {
 }
 
 .btn--text {
-  padding: 0 0.5rem;
+  padding: 0 8px;
 }
 
 .btn--icon {
-  width: 1.5625rem;
-  height: auto;
-  margin: 0;
-  font-size: 1.5625rem;
-  max-width: 100%;
+  width: 3.8147rem;
+  font-size: 3.8147rem;
   -ms-flex-preferred-size: auto;
       flex-basis: auto;
   -webkit-box-flex: 1;
@@ -268,16 +265,12 @@ html {
 \* -------------------------------------------------------------------------- */
 .fas {
   width: 1.25rem;
-  height: auto;
-  margin: 0;
   margin-right: 0.5rem;
   font-size: 1.25rem;
 }
 
 .fab {
   width: 2.44141rem;
-  height: auto;
-  margin: 0;
   font-size: 2.44141rem;
 }
 
@@ -534,14 +527,12 @@ menu {
   /* #  ---------------------------------------- */
   /* #  --color-text hsl */
   /* #  ---------------------------------------- */
-  --color-text: hsl(0, 3.4%, 5.7%);
   --color-text-h: 0;
   --color-text-s: 3.4%;
   --color-text-l: 5.7%;
   /* #  ---------------------------------------- */
   /* #  --color-background hsl */
   /* #  ---------------------------------------- */
-  --color-background: hsl(0, 11.1%, 96.5%);
   --color-background-h: 0;
   --color-background-s: 11.1%;
   --color-background-l: 96.5%;
@@ -608,14 +599,12 @@ menu {
   /* #  ---------------------------------------- */
   /* #  --color-text hsl */
   /* #  ---------------------------------------- */
-  --color-text: hsl(240, 100%, 10%);
   --color-text-h: 240;
   --color-text-s: 100%;
   --color-text-l: 10%;
   /* #  ---------------------------------------- */
   /* #  --color-background hsl */
   /* #  ---------------------------------------- */
-  --color-background: hsl(240, 100%, 98.6%);
   --color-background-h: 240;
   --color-background-s: 100%;
   --color-background-l: 98.6%;
