--- a/assets/styles/scss/base/_b-interactive.scss
+++ b/assets/styles/scss/base/_b-interactive.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------- *\
-// *  <<--------------------<< INTERACTIVE >>-------------------->>
+// *  <<--------------------<< component >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- *\
