--- a/assets/styles/scss/base/_b-table.scss
+++ b/assets/styles/scss/base/_b-table.scss
@@ -8,30 +8,28 @@
 
 // #  <---------------| <table> |--------------->
 table {
-  width: 100%;
-  padding: $buffer--s;
-  margin: $buffer--s;
-  margin-bottom: $buffer--s;
+  @include box-dimensions(m);
+  @include font(component-bigger);
+
   border-collapse: collapse;
-  color: var(--color-text);
   table-layout: fixed;
 }
 
 // #  <---------------| <thead> |--------------->
 thead {
-  padding: $buffer--xs;
-  border-bottom: $small-dimension--xxxs solid var(--color-secondary);
-  color: var(--color-text);
+  @include box-dimensions(s);
+  @include font(component-bigger);
 }
 // #  <---------------| <tr> |--------------->
 tr {
-  padding: $buffer--xs;
-  color: var(--color-text);
+  @include box-dimensions(s);
+  @include font(component-bigger);
 }
 
 // #  <---------------| <tbody> |--------------->
 tbody {
-  padding: $buffer--xs;
+  @include box-dimensions(s);
+  @include font(component-bigger);
 
   tr:nth-child(even) {
     background-color: var(--color-background);
@@ -51,15 +49,14 @@ tbody {
 
 // #  <---------------| <tfoot> |--------------->
 tfoot {
-  padding: $buffer--xs;
-  border-top: $small-dimension--xxxs solid var(--color-secondary);
-  color: var(--color-text);
+  @include box-dimensions(s);
+  @include font(component-bigger);
 }
 
 // #  <---------------| <colgroup> |--------------->
 colgroup {
-  padding: $buffer--xs;
-  color: var(--color-text);
+  @include box-dimensions(s);
+  @include font(component-bigger);
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -82,7 +79,6 @@ col {
 th {
   padding: $buffer--xs;
   color: var(--color-text);
-  font-weight: $font-weight--subject;
   text-align: left;
   vertical-align: top;
   word-wrap: break-word;
