--- a/assets/styles/scss/waiting-on-migration/components/_button--old.scss
+++ b/assets/styles/scss/waiting-on-migration/components/_button--old.scss
@@ -66,7 +66,7 @@
 }
 
 .btn--icon {
-  @include box-dimensions(btn, $font-size--3);
+  @include box-dimensions(btn, $font-size--h1);
   @include flex-items;
 }
 
